--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 width="200" 
                  height="200" /></td>
             <td> <h1> Sharik Khan </h1>
-                <p> <em> Founder and CEO of <strong> <a href="https://www.freepik.com/"> Designsbysharik</a></strong>. </em> </p>
+                <p> <em> Founder and CEO of <strong> <a href="https://www.instagram.com/designsbysharik/"> Designsbysharik</a></strong>. </em> </p>
                 <p> I am an android and ios developer and i love coffee and chiken as well </p></td>     
         </tr>
     </table>
